kubernetes/tls/cmpsite_08_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  #Ingress defining BASE_URL_TLS/acess using the self-signed certificated from cmpsite-tls secret
  name: cmpsite-tlsingress
  namespace: cmpsite-namespace
spec:
  tls:
  - secretName: cmpsite-tls
  rules:
  - http:
      paths:
      - path: /secure
        pathType: Prefix
        backend:
          service:
            name: cmpsite-service
            port:
              number: 8000
